[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for zlib"
license = "Zlib"
name = "cmeel-zlib"
requires-python = ">= 3.8"
version = "1.3.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-zlib"
repository = "https://github.com/cmake-wheel/cmeel-zlib.git"
upstream = "https://zlib.net/"

[tool.cmeel]
has-sitelib = false
run-tests = false

[tool.tomlsort]
all = true
